--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -28,30 +28,27 @@ body {
 .activity-container {
   position: absolute;
   background-color: #ffffff;
-  width: 700px;
+  width: 600px;
   min-height: 600px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  //  border-radius: 8px;
+   border-radius: 15px;
   // padding: 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-
-  &:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-
-    transform: translate(-50%, -51%);
-  }
+ 
 
   // &.modal-open {
   //   filter: blur(5px) grayscale(50%);
   // }
 
   .header-text {
-    background-color: black;
+    background-color: #5957b9;
     color: white;
+    border-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     // border-radius: 8px;
     padding: 10px 0;
     margin: 0 0 10px 0;
@@ -62,8 +59,19 @@ body {
       top: 50%;
       transform: translateY(-50%);
       font-weight: bold;
-      border: 2px solid #ffffff;
+      // border: 2px solid #ffffff;
+      background-color: white;
+      color: #5957b9;
+      font-weight: bold;
       padding: 5px 10px;
+      border-radius: 8px;
+      transition: 0.5s all;
+      &:hover{
+        border-bottom: 5px solid gray;
+      }
+      &:active{
+        border: none;
+      }
       // border-radius: 8px;
       .fa-plus-square {
         margin-right: 10px;
@@ -80,7 +88,7 @@ body {
   display: flex;
   flex-direction: row;
   text-align: left;
-  margin: 10px 0;
+  // margin: 10px 0;
   width: 100%;
   // position: relative;
   // max-height: 100px;
@@ -95,10 +103,10 @@ body {
     transform: translateY(0px);
   }
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-
+  border: none;
   &:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-
+    border-bottom: 5px gray solid;
     transform: translateY(-3px);
   }
 }
@@ -108,7 +116,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  width: 50%;
+  width: 60%;
   .activity-name {
     font-size: 18px;
     margin-bottom: 10px;
@@ -118,7 +126,7 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     font-weight: 500;
-    background-color: black;
+    background-color: #5957b9;
     color: white;
     width: fit-content;
   }
@@ -127,7 +135,7 @@ body {
 .btn-delete {
   width: 100px;
   border: none;
-  background-color: #DD2C01 !important;
+  background-color: #dd2c01 !important;
   color: white !important;
   border-radius: 0 !important;
   font-size: 20px;
@@ -140,8 +148,8 @@ body {
 }
 
 .card-tools {
-  background-color: black;
-  width: 50%;
+  background-color: #5957b9;
+  width: 40%;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -158,18 +166,19 @@ body {
 
   .fa-circle,
   .fa-check-circle {
-    font-size: 50px;
+    font-size: 40px;
     color: white;
   }
 
   button {
     border: none;
-    padding: 15px 20px;
+    padding: 10px 10px;
     font-size: 20px;
     // border-radius: 8px;
     background-color: white;
     color: black;
     outline: none;
+    border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
     transform: translateY(0px);
@@ -179,10 +188,11 @@ body {
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
       transform: translateY(-3px);
+      border-bottom: 5px gray solid;
     }
     &:active {
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-
+      border-bottom: 0;
       transform: translateY(0px);
     }
   }
@@ -206,13 +216,14 @@ body {
     margin: 0 20px;
     height: 40px;
     width: 80px;
+    color:#5957b9;
 
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
     transform: translateY(-3px);
     &:hover {
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
       transform: translateY(0px);
     }
@@ -222,26 +233,24 @@ body {
   .fa-chevron-right {
     // border: 2px solid black;
     // padding: 5px 10px;
-
+    color: #5957b9;
+  
     cursor: pointer;
     height: 40px;
     width: 40px;
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
     transform: translateY(-3px);
     &:active {
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
       transform: translateY(0px);
     }
   }
 }
 
-
-.modal-background{
-
-
+.modal-background {
   position: relative;
   width: 100vw;
   height: 100vh;
@@ -250,8 +259,8 @@ body {
   visibility: hidden;
   // opacity: 0.8;
 
-  &.modal-open{
-    visibility: visible; 
+  &.modal-open {
+    visibility: visible;
   }
 }
 
